edit: correct track and thumb color showing on firefox scrollbar

--- a/src/static/css/partials/accordion.css
+++ b/src/static/css/partials/accordion.css
@@ -28,6 +28,7 @@
 .accordion__drawers__item__top__label {
 	--spacing-top: 0px;
 	--spacing-bottom: 0px;
+	pointer-events: none;
 }
 
 .accordion__drawers__item__top__arrow {
