--- a/src/static/css/partials/product-grid.css
+++ b/src/static/css/partials/product-grid.css
@@ -11,6 +11,7 @@
 	padding-bottom: var(--scrollbar-top-spacing);
 	/* Firefox scrollbar styles */
 	scrollbar-width: thin;
+	scrollbar-color: var(--color-scrollbar-thumb) var(--color-scrollbar-track);
 }
 
 .product-grid__inner::-webkit-scrollbar {
